# mesaYa

./: .dockerignore  .env  .env.template  .gitmodules  README.md  docker-compose.yml
docs/: MCP_INTEGRATION_SUMMARY.md  PAYMENT_REFACTORING_COMPLETE.md  README.md  REFACTORING_SUMMARY.md  srs.md
docs/c4/code/: c4_model_context.dsl
infrastructure/kafka/: Dockerfile  README.md  create-topics.sh  docker-compose.yml
infrastructure/n8n/: .env.template  Dockerfile  GMAIL_SETUP.md  README.md  docker-compose.yml  entrypoint.sh  import-workflows-docker.ps1  setup-n8n-variables.ps1
infrastructure/n8n/templates/: README.md  daily-report-email.html
infrastructure/n8n/workflows/: README.md  daily-report.json  kafka-reservation-consumer.json  mcp-input-handler.json  partner-handler.json  payment-handler.json  reservation-notification.json  reservation-reminder-24h.json
infrastructure/shared/: index.ts  package-lock.json  package.json  tsconfig.json
infrastructure/shared/events/: auth-events.interface.ts  base-event.interface.ts  index.ts
infrastructure/shared/kafka/: event-types.constant.ts  index.ts  kafka-topics.constant.ts  kafka.constants.ts  kafka.consumer.explorer.ts  kafka.decorators.ts  kafka.module.ts  kafka.service.ts
infrastructure/shared/types/: auth-role-name.enum.ts  index.ts  (+2 more)
mesaYA_partner_demo/: .gitignore  README.md  pyproject.toml
mesaYA_partner_demo/src/mesaya_partner_demo/: __init__.py  __main__.py  app.py  config.py  mesa_ya_client.py  models.py  webhook_service.py
mesaYA_partner_demo/src/mesaya_partner_demo/templates/: dashboard.html
