[project]
name = "mesaya-partner-demo"
version = "1.0.0"
description = "Demo B2B Partner service for MesaYA - Demonstrates webhook interoperability"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "httpx>=0.28.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.20",
]

[project.scripts]
mesaya-partner = "mesaya_partner_demo:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mesaya_partner_demo"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
